; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_l2cap.c_l2cap_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_l2cap.c_l2cap_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@l2cap_pcbs = common dso_local global i32 0, align 4
@l2cap_listenpcbs = common dso_local global i32 0, align 4
@l2cap_sigs = common dso_local global i32 0, align 4
@l2cap_segs = common dso_local global i32 0, align 4
@l2cap_listen_pcbs = common dso_local global i32* null, align 8
@l2cap_active_pcbs = common dso_local global i32* null, align 8
@l2cap_tmp_pcb = common dso_local global i32* null, align 8
@l2cap_tmp_sig = common dso_local global i32* null, align 8
@l2cap_insegs = common dso_local global i32* null, align 8
@l2cap_tmp_inseg = common dso_local global i32* null, align 8
@l2cap_disconnect_bb_cb = common dso_local global i32* null, align 8
@sigid_nxt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2cap_init() #0 {
  %1 = call i32 @btmemb_init(i32* @l2cap_pcbs)
  %2 = call i32 @btmemb_init(i32* @l2cap_listenpcbs)
  %3 = call i32 @btmemb_init(i32* @l2cap_sigs)
  %4 = call i32 @btmemb_init(i32* @l2cap_segs)
  store i32* null, i32** @l2cap_listen_pcbs, align 8
  store i32* null, i32** @l2cap_active_pcbs, align 8
  store i32* null, i32** @l2cap_tmp_pcb, align 8
  store i32* null, i32** @l2cap_tmp_sig, align 8
  store i32* null, i32** @l2cap_insegs, align 8
  store i32* null, i32** @l2cap_tmp_inseg, align 8
  store i32* null, i32** @l2cap_disconnect_bb_cb, align 8
  store i32 0, i32* @sigid_nxt, align 4
  ret void
}

declare dso_local i32 @btmemb_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
